--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -2,12 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/human_map"
     tools:context="com.startupweekend.infect.HomeActivity" >
-
-
+    
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:map="http://schemas.android.com/apk/res-auto"
+          android:id="@+id/map"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:name="com.google.android.gms.maps.MapFragment"
+          map:cameraZoom="18"
+          map:uiRotateGestures="true"
+		  map:uiScrollGestures="false"
+		  map:uiTiltGestures="true"
+		  map:uiZoomControls="false"
+		  map:uiZoomGestures="false"/>
 </RelativeLayout>
