--- a/res/layout/activity_battleresult.xml
+++ b/res/layout/activity_battleresult.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/zombie_attack"
+    android:background="@drawable/human_battle_lost"
     tools:context="com.startupweekend.infect.HomeActivity" >
 
 
