--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -10,10 +10,10 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:name="com.google.android.gms.maps.MapFragment"
-          map:cameraZoom="18"
+          map:cameraZoom="17"
           map:uiRotateGestures="true"
 		  map:uiScrollGestures="false"
 		  map:uiTiltGestures="true"
 		  map:uiZoomControls="false"
-		  map:uiZoomGestures="false"/>
+		  map:uiZoomGestures="true"/>
 </RelativeLayout>
